--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.formats.fbx": "5.1.1",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.7.0",
     "com.unity.render-pipelines.universal": "16.0.6",
     "com.unity.visualeffectgraph": "16.0.6",
